[tool.poetry]
name = "conduktor-platform-gateway-sync"
version = "0.0.1"
description = "Simple script to sync Platform with Gateway tenants"
authors = ["John \"Preston\" Mille <john@ews-network.net>"]
readme = "README.md"
packages = [{include = "conduktor_platform_gateway_sync"}]

[tool.poetry.dependencies]
python = "^3.10"
cdk-proxy-api-client = "^0.3.0"
conduktor-public-api-client = "^0.0.1"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
